Fix extra gap b/w list items and fix Xicon

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,6 @@ nav {
 }
 
 .close-icon {
-  position: fixed;
   top: 62px;
   right: 38px;
   z-index: 100;
@@ -87,7 +86,7 @@ nav {
   display: flex;
   align-items: center;
   padding-left: 28px;
-  padding-bottom: 40px;
+  padding-bottom: 15px;
   color: #fff;
   gap: 40px;
 }
@@ -499,6 +498,7 @@ button:disabled {
 }
 
 @media (max-width: 767px) {
+
   .js-shape,
   .html-shape,
   .css-shape,
@@ -514,6 +514,7 @@ button:disabled {
 }
 
 @media (min-width: 768px) {
+
   .tonic-int,
   .canopy,
   #change,
